# KittenTTS

./: .gitignore  MANIFEST.in  README.md  example.py  example_streaming.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: package.yml
docs/: native_engine_release.md
kittentts/: __init__.py  cpp_model.py  get_model.py
kittentts/model_defs/: kitten_fp32_15m_arch.json  kitten_fp32_40m_arch.json  kitten_fp32_80m_arch.json  kitten_int8_15m_arch.json  kitten_int8_40m_arch.json  kitten_int8_80m_arch.json
tests/: audio_smoke.py
